<resources>
    <string name="app_name">datingappp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="city">city</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="other_users">Other users</string>
    <string name="gallery">Gallery</string>
    <string name="settings">Settings</string>
    <string name="communicate">Communicate</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="sign_up_now">Sign Up Now!!</string>
    <string name="what_is_on_your_mind">What is on your mind?</string>
    <string name="home">Home</string>
    <string name="_10">10</string>
</resources>
