<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_other_users"
            android:icon="@drawable/ic_group"
            android:title="@string/other_users" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_friendship"
            android:title="Friends" />
        <item
            android:id="@+id/nav_settingss"
            android:icon="@drawable/ic_menu_manage"
            android:title="Settings"
            />

    </group>

    <item android:title="Others">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_about_us"
                android:title="@string/about_us"
                />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
