<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profilestyle"
    tools:context="com.example.hp.datingapp.OthersProfileActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="412dp"
        android:layout_height="158dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_image"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:elevation="5dp"
        android:padding="5dp"
        android:scaleType="centerCrop"
        android:src="@drawable/profile"
        app:civ_border_color="#FFFFFFFF"
        app:civ_border_width="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.029" />

    <TextView
        android:id="@+id/tvFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"

        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:fontFamily="@font/roboto"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.434"
        tools:layout_editor_absoluteX="0dp"
        tools:text="Name" />

    <LinearLayout
        android:layout_width="401dp"
        android:layout_height="296dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"

        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98">

        <TextView
            android:id="@+id/tvUser_Name"

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="cursive"
            android:text="@string/username"
            android:textColor="#fff"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"

            android:layout_height="50dp"

            android:fontFamily="cursive"
            android:text="@string/email"
            android:textAlignment="textStart"
            android:textColor="#fff"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCity"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="cursive"
            android:text="@string/city"
            android:textAlignment="textStart"
            android:textColor="#fff"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvAge"
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:fontFamily="cursive"
            android:text="@string/age"
            android:textAlignment="textStart"
            android:textColor="#fff"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvGender"
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:fontFamily="cursive"
            android:text="@string/gender"
            android:textAlignment="textStart"
            android:textColor="#fff"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
